storage/innobase/srv/srv0start.cc
@@ -153,15 +153,23 @@ UNIV_INTERN uint	srv_sys_space_size_debug;
 determine which threads need to be stopped if we need to abort during
 the initialisation step. */
 enum srv_start_state_t {
+	/** No thread started */
 	SRV_START_STATE_NONE = 0,		/*!< No thread started */
+	/** lock_wait_timeout_thread started */
 	SRV_START_STATE_LOCK_SYS = 1,		/*!< Started lock-timeout
 						thread. */
-	SRV_START_STATE_IO = 2,			/*!< Started IO threads */
-	SRV_START_STATE_MONITOR = 4,		/*!< Started montior thread */
-	SRV_START_STATE_MASTER = 8,		/*!< Started master threadd. */
-	SRV_START_STATE_PURGE = 16,		/*!< Started purge thread(s) */
-	SRV_START_STATE_STAT = 32		/*!< Started bufdump + dict stat
-						and FTS optimize thread. */
+	/** buf_flush_page_cleaner_coordinator,
+	buf_flush_page_cleaner_worker started */
+	SRV_START_STATE_IO = 2,
+	/** srv_error_monitor_thread, srv_monitor_thread started */
+	SRV_START_STATE_MONITOR = 4,
+	/** srv_master_thread started */
+	SRV_START_STATE_MASTER = 8,
+	/** srv_purge_coordinator_thread, srv_worker_thread started */
+	SRV_START_STATE_PURGE = 16,
+	/** fil_crypt_thread, btr_defragment_thread started
+	(all background threads that can generate redo log but not undo log */
+	SRV_START_STATE_REDO = 32
 };
 
 /** Track server thrd starting phases */
@@ -189,9 +197,6 @@ static os_thread_t	buf_dump_thread_handle;
 static os_thread_t	dict_stats_thread_handle;
 /** Status variables, is thread started ?*/
 static bool		thread_started[SRV_MAX_N_IO_THREADS + 6 + 32] = {false};
-static bool		buf_dump_thread_started = false;
-static bool		dict_stats_thread_started = false;
-static bool		buf_flush_page_cleaner_thread_started = false;
 /** Name of srv_monitor_file */
 static char*	srv_monitor_file_name;
 
@@ -1228,10 +1233,6 @@ srv_shutdown_all_bg_threads()
 {
 	srv_shutdown_state = SRV_SHUTDOWN_EXIT_THREADS;
 
-	if (!srv_start_state) {
-		return;
-	}
-
 	/* All threads end up waiting for certain events. Put those events
 	to the signaled state. Then the threads will exit themselves after
 	os_event_wait(). */
@@ -1841,7 +1842,6 @@ innobase_start_or_create_for_mysql()
 	recv_sys_create();
 	recv_sys_init(buf_pool_get_curr_size());
 	lock_sys_create(srv_lock_table_size);
-	srv_start_state_set(SRV_START_STATE_LOCK_SYS);
 
 	/* Create i/o-handler threads: */
 
@@ -1859,8 +1859,6 @@ innobase_start_or_create_for_mysql()
 		buf_page_cleaner_is_active = true;
 		os_thread_create(buf_flush_page_cleaner_coordinator,
 				 NULL, NULL);
-
-		buf_flush_page_cleaner_thread_started = true;
 
 		for (i = 1; i < srv_n_page_cleaners; ++i) {
 			os_thread_create(buf_flush_page_cleaner_worker,
@@ -2559,7 +2557,8 @@ files_checked:
 			srv_monitor_thread,
 			NULL, thread_ids + 4 + SRV_MAX_N_IO_THREADS);
 		thread_started[4 + SRV_MAX_N_IO_THREADS] = true;
-		srv_start_state_set(SRV_START_STATE_MONITOR);
+		srv_start_state |= SRV_START_STATE_LOCK_SYS
+			| SRV_START_STATE_MONITOR;
 	}
 
 	/* Create the SYS_FOREIGN and SYS_FOREIGN_COLS system tables */
@@ -2615,7 +2614,6 @@ files_checked:
 		srv_dict_stats_thread_active = true;
 		dict_stats_thread_handle = os_thread_create(
 			dict_stats_thread, NULL, NULL);
-		dict_stats_thread_started = true;
 
 		/* Create the thread that will optimize the FTS sub-system. */
 		fts_optimize_init();
@@ -2703,7 +2701,6 @@ files_checked:
 		buf_dump_thread_handle=
 			os_thread_create(buf_dump_thread, NULL, NULL);
 
-		buf_dump_thread_started = true;
 #ifdef WITH_WSREP
 		} else {
 			ib::warn() <<
@@ -2735,7 +2732,7 @@ files_checked:
 		btr_defragment_thread_active = true;
 		os_thread_create(btr_defragment_thread, NULL, NULL);
 
-		srv_start_state_set(SRV_START_STATE_STAT);
+		srv_start_state |= SRV_START_STATE_REDO;
 	}
 
 	/* Create the buffer pool resize thread */
@@ -2775,8 +2772,7 @@ srv_fts_close(void)
 }
 #endif
 
-/****************************************************************//**
-Shuts down background threads that can generate undo pages. */
+/** Shut down background threads that can generate undo log. */
 void
 srv_shutdown_bg_undo_sources()
 {
@@ -2797,8 +2793,7 @@ void
 innodb_shutdown()
 {
 	ut_ad(!srv_running);
-
-	srv_shutdown_bg_undo_sources();
+	ut_ad(!srv_undo_sources);
 
 	/* 1. Flush the buffer pool to disk, write the current lsn to
 	the tablespace header(s), and copy all log data to archive.
@@ -2851,7 +2846,7 @@ innodb_shutdown()
 		dict_stats_thread_deinit();
 	}
 
-	if (srv_start_state_is_set(SRV_START_STATE_STAT)) {
+	if (srv_start_state_is_set(SRV_START_STATE_REDO)) {
 		ut_ad(!srv_read_only_mode);
 		/* srv_shutdown_bg_undo_sources() already invoked
 		fts_optimize_shutdown(); dict_stats_shutdown(); */
@@ -2924,10 +2919,6 @@ innodb_shutdown()
 		buf_pool_free(srv_buf_pool_instances);
 	}
 
-	/* 6. Free the thread management resoruces. */
-	os_thread_free();
-
-	/* 7. Free the synchronisation infrastructure. */
 	sync_check_close();
 
 	if (dict_foreign_err_file) {
